Changed title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: LiveThread for Reddit
+description: [An Android and iOS app to turn Reddit posts into live comment streams.]
